Minor changes to address collection

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cleanImb)
 export(cleanMioAffitto)
 export(getAgenzieDetailsImmobiliare)
 export(getAgenzieNumImmobiliare)
+export(getCasaMainPages)
 export(getNumPagesCasa)
 export(getNumPagesImmobiliare)
 export(getNumPagesMioAffitto)
