Adding function to get addresses in a grid

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,5 +16,6 @@ export(getPropertyDetailsMioAffitto)
 export(getPropertyUrlsCasa)
 export(getPropertyUrlsImmobiliare)
 export(getPropertyUrlsMioAffitto)
+export(pullGridAddresses)
 export(pullNewAddresses)
 export(substrRight)
