--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(assignDirectory)
 export(cleanAddressFile)
 export(cleanImb)
 export(cleanMioAffitto)
+export(compileScrapedHistory)
 export(getAgenzieDetailsImmobiliare)
 export(getAgenzieNumImmobiliare)
 export(getCasaMainPages)
